--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -23,4 +23,10 @@
     <Folder Include="GameResults\Queries\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Application.UnitTests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+	
 </Project>
