--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=rpssl.db;Port=5432;Database=rpssl;Username=postgres;Password=postgres;Include Error Detail=true",
-    "MessageBroker": "amqp://rpssl-mq:5672"
+    "Database": "Host=rpssl.db;Port=5432;Database=rpssl;Username=postgres;Password=postgres;Include Error Detail=true"
   },
   "Serilog": {
     "Using": [
