- introduced new class GameResultResponseFull, needed for testing purposes - replacing namespace brackets with semi-colon

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="GameResults\Queries\**" />
+    <EmbeddedResource Remove="GameResults\Queries\**" />
+    <None Remove="GameResults\Queries\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
@@ -17,10 +23,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="GameResults\Queries\" />
   </ItemGroup>
 
 	<ItemGroup>
