- Moving the external service address to appsettings.json

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Database": "Host=rpssl.db;Port=5432;Database=rpssl;Username=postgres;Password=postgres;Include Error Detail=true"
   },
+  "RandomNumberServiceAddress": "https://codechallenge.boohma.com/random",
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
@@ -20,6 +21,6 @@
         "Args": { "serverUrl": "http://rpssl-seq:5341" }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
